--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -19,16 +19,16 @@
 @use 'components/sound-settings';
 
 // New components
-@use 'components/sheet/erps-data-tables';
-@use 'components/sheet/erps-tabs';
-@use 'components/sheet/erps-status-cards';
-@use 'components/sheet/erps-resource-boxes';
-@use 'components/sheet/erps-ability-cards';
+@use 'components/sheet/tables';
+@use 'components/sheet/tabs';
+@use 'components/sheet/status-cards';
+@use 'components/sheet/resource-boxes';
+@use 'components/sheet/ability-cards';
 @use 'components/sheet/erps-profile-images';
-@use 'components/sheet/erps-toggles';
-@use 'components/sheet/erps-inputs';
-@use 'components/sheet/erps-items-panel';
-@use 'components/sheet/erps-forms';
+@use 'components/sheet/toggles';
+@use 'components/sheet/inputs';
+@use 'components/sheet/items-panel';
+@use 'components/sheet/forms';
 @use 'components/sheet/erps-callouts';
 @use 'components/sheet/erps-form-footer';
 
@@ -37,17 +37,3 @@
 @import 'https://fonts.googleapis.com/css2?family=Combo&family=Amatic+SC:wght@400;700&family=Merienda:wght@300..900&family=Protest+Revolution&family=Underdog&family=Carlito:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Goblin+One&display=swap';
 @import 'https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Crimson+Text:wght@400;600&family=Libre+Baskerville:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap';
 
-.eventide-rp-system {
-  @include meta.load-css('components/sheet/erps-resource-boxes');
-  @include meta.load-css('components/sheet/erps-ability-cards');
-  @include meta.load-css('components/sheet/erps-data-tables');
-  @include meta.load-css('components/sheet/erps-tabs');
-  @include meta.load-css('components/sheet/erps-status-cards');
-  @include meta.load-css('components/sheet/erps-profile-images');
-  @include meta.load-css('components/sheet/erps-toggles');
-  @include meta.load-css('components/sheet/erps-inputs');
-  @include meta.load-css('components/sheet/erps-items-panel');
-  @include meta.load-css('components/sheet/erps-forms');
-  @include meta.load-css('components/sheet/erps-callouts');
-  @include meta.load-css('components/sheet/erps-form-footer');
-}
